# Code2MarkDown

./: .gitignore  OfficialICResource.xml  README.md  cli.py  main.py  pyproject.toml
src/: code2md.py  config.py  utils.py
