[project]
name = "code2markdown"
version = "0.1.0"
description = "Convert code projects to structured Markdown documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pathlib",
    "dataclasses",
    "typing",
    "datetime"
]

[tool.uv.workspace]
members = [
    "Markdown",
]
